--- a/.project_config
+++ b/.project_config
@@ -2,4 +2,4 @@ ProjectName = "WicWacWoe";
 Compiler = cl;
 CompilerFlags = "-W4 -Zi -EHsc";
 MainFile = "main.cpp";
-LinkLibs = "User32.lib";
+LinkLibs = "User32.lib Gdi32.lib";
